src/App.css
@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css");

html {
  background-color: #0A1929;
}

body {
  margin: 0;
}

a {
  text-decoration: none;
  display: inline-block;
}

.App {
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  display: flex;
  flex-direction: column;
  text-align: center;
}

.Home {
  color: white;
  margin: 10rem auto 5rem;
  text-align: center;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.Home h2 {
  margin-top: 10rem;
}

.NewProduct,
.EditProduct {
  color: white;
  margin: 5rem auto 5rem;
}

table {
  margin: 2rem 0.5rem;
  border-radius: 10px;
  background-color: transparent;
  border: 0.1rem solid #1a779160;
}

th {
  padding: 0.5rem;
  color: #dcdcdc;
  border-bottom: 0.1rem solid #1a779160;
  border-right: 0.1rem solid #1a779160;
}

tbody {
  /* background-color: #dcdcdc; */
  background-color: #0A1929;
}

td {
  padding: 0.5rem 1.5rem;
  /* color: #282c34; */
  color: #dcdcdc;
  font-weight: 500;
  /* border-bottom: 2px solid #282c34; */
  border-bottom: 0.1rem solid #1a779160;
  border-right: 0.1rem solid #1a779160;
}

tr td:nth-child(3) {
  text-align: right;
}

tfoot {
  height: 1.5rem;
}

.button {
  padding: 5px 15px;
  width: 100%;
  border-radius: 4px;
  color: #ededed;
  font-size: 0.875em;
  line-height: 1.75;
  font-weight: 500;
  border: none;
  cursor: pointer;
  text-decoration: none;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  margin: 0 auto;
}

i {
  margin-right: 0.5rem;
}

.bi-arrow-counterclockwise {
  margin-top: 0.1rem
}

.add {
  font-size: 1rem;
  color: #0A1929;
  transition: background-color 250ms;
  background-color: #66BB6A;
}

.add:hover {
  transition: background-color 250ms;
  background-color: #0e943b;
}

button:disabled {
  opacity: 0.9;
}

.delete {
  color: rgb(144, 202, 249);
  background-color: transparent;
  border: 1px solid rgba(144, 202, 249, 0.5);
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.delete:hover {
  color: #90CAF9;
  background-color: #90caf914;
  border: 1px solid #90CAF9;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.edit {
  color: #0A1929;
  background-color: #8FC9F9;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.edit:hover {
  background-color: #42A5F5;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.back {
  background-color: #4323b6;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.back:hover {
  background-color: #502bd6;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

form button {
  font-size: 1.1rem !important;
  margin-top: 20px !important;
}

.underline {
  text-decoration: underline #90CAF9;
}

form {
  display: flex;
  flex-direction: column;
  margin: 20px 10px 50px;
}

.input-container {
  position: relative;
  width: 100%;
  height: 50px;
  margin: 10px auto;
}

form input {
  border-radius: 4px 4px 0 0;
  box-sizing: border-box;
  /* background: #f5f5f5; */
  background: #202E3C;
  /* caret-color: #4323b6; */
  caret-color: #90CAF9;
  border: 3px solid transparent;
  /* border-bottom-color: rgba(0, 0, 0, 0.42); */
  border-bottom-color: #B2B7BC;
  transition: border 500ms;
  /* color: rgba(0, 0, 0, 0.87); */
  color: #B2B7BC;
  padding: 20px 15px 6px;
  font-size: 1.2rem;
}

form input:hover {
  /* background-color: #ececec; */
  background-color: #2A3745;
}

form input:focus {
  outline: 0;
  transition: all 250ms;
  /* border-bottom: 3px solid #4323b6; */
  border-bottom: 3px solid #90CAF9;
  /* background-color: #dcdcdc; */
  background-color: #202E3C;
}

.input-error {
  border-bottom: 3px solid #a31212;
}

.input-ok {
  border-bottom: 3px solid #0e943b;
}

label {
  color: #B2B7BC;
  display: block;
  text-align: left;
  transition: transform 200ms cubic-bezier(0.4, 0, 0.2, 1), color 200ms cubic-bezier(0.4, 0, 0.2, 1);
}

form input:focus+label {
  color: #90CAF9 !important;
}

.placeholder {
  display: block;
  position: absolute;
  top: 25px;
  transform: translateY(-40%) scale(1);
  left: 15px;
  transform-origin: left top;
  transition: transform 200ms cubic-bezier(0.4, 0, 0.2, 1), color 200ms cubic-bezier(0.4, 0, 0.2, 1);
  user-select: none;
  cursor: text;
}

.label-focus {
  display: block;
  position: absolute;
  top: 25px;
  transform: translateY(-100%) scale(0.9);
  left: 15px;
  transform-origin: left top;
  transition: transform 150ms cubic-bezier(0.4, 0, 0.2, 1), color 150ms cubic-bezier(0.4, 0, 0.2, 1);
  user-select: none;
  cursor: text;
}

.label-error {
  color: #f44336;
}

.error-span-container {
  line-height: 1rem;
  padding: 0 0.8rem;
  text-align: left;
  font-size: 0.75rem;
}

.error-span {
  transform-origin: top left;
  transition: all 250ms;
  transform: translateY(-10px);
  color: #f44336;

}

.hidden {
  transform-origin: top left;
  transition: all 250ms;
  color: rgb(244, 67, 54, 0);
  transform: translateY(0);

}

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

input[type=number] {
  -moz-appearance: textfield;
}

.edit-responsive {
  padding: 4px 8px;
  border-radius: 5px;
  background-color: #bccccc;
  color: #1a7791;
  display: none;
}


.delete-responsive {
  border: 0;
  padding: 4px 8px;
  border-radius: 5px;
  background-color: #bccccc;
  color: #a31212;
  cursor: pointer;
  display: none;
}

.loading {
  opacity: 0.6;
  pointer-events: none;
}

.delete-responsive:nth-last-child() {
  transform: translateY(-10px);
}

@media only screen and (max-width: 600px) {
  .edit {
    display: none;
  }

  .delete {
    display: none;
  }

  .edit-responsive {
    display: inline;
  }

  .delete-responsive {
    display: inline;
  }

  th {
    padding: 0.5rem 0.5rem;
  }

  td {
    padding: 0.5rem 0.5rem;
  }

  table {
    width: 95%;
    margin: 2rem auto;
  }

  tbody {
    word-break: break-all;
  }

  .Home {
    margin: 5rem auto;
  }

  i {
    margin: 0;
  }
}

